# Mosaic-Puzzle-Game

./: README.md
game/: .gitignore  CMakeLists.txt  game_ext.h  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test_aelmouden.c  game_test_imohammi.c  game_test_mrabih.c  game_text.c  game_tools.c
web/: demo.html  demo.js  game.wasm
web/src/: game.c  game_aux.c  game_ext.c  game_tools.h
